Fix footer covering bottom of page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -19,6 +19,7 @@ body {
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
+  margin-bottom: 3em;
 }
 article,
 aside,
